--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -2,16 +2,16 @@
   "providers": [
     "awscloudformation"
   ],
-  "projectName": "cloudassistant",
+  "projectName": "CloudAssitant",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
     "framework": "react",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": "build",
-      "BuildCommand": "npm.cmd run-script build",
-      "StartCommand": "npm.cmd run-script start"
+      "DistributionDir": "dist",
+      "BuildCommand": "npm run build",
+      "StartCommand": "npm run dev "
     }
   }
 }
