--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,30 @@
 {
+  "api": {
+    "CloudAssistantAPI": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "cloudassitant8ea51a8e"
+        }
+      ],
+      "output": {
+        "authConfig": {
+          "additionalAuthenticationProviders": [],
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authcloudassitant8ea51a8e"
+            }
+          }
+        }
+      },
+      "providerPlugin": "awscloudformation",
+      "service": "AppSync"
+    }
+  },
   "auth": {
     "cloudassitant8ea51a8e": {
       "customAuth": false,
@@ -25,6 +51,7 @@
       "service": "Cognito"
     }
   },
+  "function": {},
   "storage": {
     "UserPreferencesStorage": {
       "providerPlugin": "awscloudformation",
